Use keydown plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,8 +129,16 @@ endif()
 
 
 #######################Project Setting########################
-FILE(GLOB SRC_SOURCES	App/${APP_NAME}/*.cpp App/${APP_NAME}/*.c include/common/*.cpp include/ui/*.cpp) 
-FILE(GLOB SRC_HEADERS	App/${APP_NAME}/*.h App/${APP_NAME}/*.hpp include/ui/*.h)
+FILE(GLOB SRC_SOURCES	App/${APP_NAME}/*.cpp App/${APP_NAME}/*.c 
+                        include/common/*.cpp 
+						App/${APP_NAME}/plugin/*.cpp
+						include/ui/*.cpp
+						) 
+FILE(GLOB SRC_HEADERS	App/${APP_NAME}/*.h 
+                        App/${APP_NAME}/*.hpp 
+						App/${APP_NAME}/plugin/*.h
+						include/ui/*.h
+						)
 set(SRC_LIST ${SRC_SOURCES} 
              ${SRC_HEADERS} 
 			 resources.cpp
